# weatherlink-bridge

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yaml  pyproject.toml  skills-lock.json
.claude/agent-memory/pytest-coverage-guardian/: MEMORY.md  feedback_pydantic_extra_allow.md  project_layout.md
.claude/agent-memory/python-feature-developer/: MEMORY.md  bug_fixes_config_dir.md  models_phase1.md  phase2_patterns.md  phase3_patterns.md  phase4_patterns.md  phase5_integration_tests.md  phase5_packaging.md  project_scaffold.md
.claude/agents/: pytest-coverage-guardian.md  python-feature-developer.md
.github/workflows/: ci.yaml  release.yml
config/sensor_maps/: windy.yaml  wunderground.yaml
deploy/k8s/: deployment.yaml  secret.example.yaml  service.yaml
docs/: release-process.md
src/weatherlink_bridge/: __init__.py  __main__.py  exceptions.py  logger.py  main.py  metrics.py  settings.py
src/weatherlink_bridge/collectors/: __init__.py  base.py  weatherlink.py
src/weatherlink_bridge/mapping/: __init__.py  mapper.py  transforms.py
src/weatherlink_bridge/models/: __init__.py  observation.py  sensor_map.py  weatherlink.py
src/weatherlink_bridge/publishers/: __init__.py  base.py  factory.py  windy.py  wunderground.py
tests/fixtures/weatherlink/: current_enviromonitor.json
tests/integration/: test_daemon_end_to_end.py  test_live_weatherlink.py  test_pipeline_windy.py  test_pipeline_wunderground.py
tests/unit/: test_base_publisher.py  test_collector_weatherlink.py  test_daemon.py  test_exceptions.py  test_field_mapper.py  test_logger.py  test_loop.py  test_metrics.py  test_models_observation.py  test_models_sensor_map.py  test_models_weatherlink.py  test_publisher_factory.py  test_publisher_windy.py  test_publisher_wunderground.py  test_settings.py  test_smoke.py  test_transforms.py
