[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[project]
name = "weatherlink-bridge"
version = "0.1.1"
description = "WeatherLink PWS bridge service forwarding to Weather Underground and Windy"
readme = "README.md"
authors = [{ name = "John Roden", email = "rodenj@gmail.com" }]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",
    "prometheus-client>=0.20",
    "pyyaml>=6.0",
    "structlog>=24.1",
]

[project.scripts]
weatherlink-bridge = "weatherlink_bridge.main:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=1",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.6",
    "mypy>=1.10",
    "pyright>=1.1.400",
    "pre-commit>=3",
    "commitizen>=4",
    "types-PyYAML",
]

[tool.pytest.ini_options]
addopts = [
    "--cov=src/weatherlink_bridge",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=95",
    "--strict-markers",
    "--strict-config",
]
testpaths = ["tests"]
norecursedirs = ["manual"]
asyncio_mode = "auto"
markers = [
    "integration: wired multi-component tests",
    "live: hits the real WeatherLink API; skipped unless WLB_LIVE_TESTS=1",
]

[tool.coverage.run]
source = ["src"]
branch = true
omit = ["*/tests/*", "*/test_*", "conftest.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "prometheus_client.*"
ignore_missing_imports = true

[tool.ruff]
line-length = 88
target-version = "py312"
extend-exclude = ["docs", "htmlcov", "build", "dist", ".venv"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B", "N", "SIM"]
"conftest.py" = ["B", "N"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
deprecateTypingAliases = true
reportDeprecated = "warning"
extraPaths = ["src/"]

[tool.commitizen]
name = "cz_customize"
version = "0.1.1"
version_provider = "pep621"
version_files = ["src/weatherlink_bridge/__init__.py:__version__"]
tag_format = "v$version"
update_changelog_on_bump = true
major_version_zero = true
allowed_prefixes = ["Merge", "Revert", "Pull request", "fixup!", "squash!"]
bump_message = "release: bump $current_version -> $new_version"

[tool.commitizen.customize]
schema_pattern = "^(feat|fix|docs|style|refactor|perf|test|build|ci|chore|revert|release|security)(\\([a-z0-9_\\-.,/]+\\))?!?: .+"
bump_pattern = "^(feat|fix|refactor|perf|security|build)"
bump_map = { "^feat" = "MINOR", "^fix" = "PATCH", "^refactor" = "PATCH", "^perf" = "PATCH", "^security" = "PATCH", "^build" = "PATCH" }
change_type_order = ["security", "feat", "fix", "refactor", "perf", "build", "ci", "docs", "style", "test", "chore"]
info = "WeatherLink Bridge follows Conventional Commits 1.0.0"
